--- a/Semana-04/CSS/header.css
+++ b/Semana-04/CSS/header.css
@@ -10,7 +10,6 @@ header {
 	border-bottom: 5px solid #AACE9B;
 	width: 100%;
 	min-height: 75px;
-	height: 9vh;
 	background-color: #EDEDED;
 	font-family: 'Poppins', sans-serif;
 }
